Add different tags to button doc

--- a/development/markups/_button.html
+++ b/development/markups/_button.html
@@ -29,7 +29,36 @@
             <br>
             <h2>_size_</h2>
 
-            <button class="button button_size_larger">.button.button_size_larger</button>
+            <button class="button button_size_larger" type="button">.button.button_size_larger</button>
+
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>Tags</h2>
+
+            <div class="button">div.button</div>
+
+            <br><br>
+
+            <span class="button">span.button</span>
+
+            <br><br>
+
+            <label class="button" for="#">label.button</label>
+
+            <br><br>
+
+            <a class="button" href="#">a.button</a>
+
+            <br><br>
+
+            <button class="button" type="button">button.button</button>
+
+            <br><br>
+
+            <input class="button" type="button" value="input.button">
 
             <br>
             <br>
