Add outline.js to docs

--- a/development/markups/_link.html
+++ b/development/markups/_link.html
@@ -59,6 +59,9 @@
         <!-- jQuery -->
         <script src="../vendors/jquery/jquery-3.2.0.min.js"></script>
 
+        <!-- Outline.js -->
+        <script src="../vendors/outline/outline.js"></script>
+
         <!-- SVG for everybody-->
         <script src="../vendors/svg4everybody/dist/svg4everybody.min.js"></script>
 
