Update docs and related blocks layout

--- a/development/markups/_button.html
+++ b/development/markups/_button.html
@@ -29,7 +29,7 @@
             <br>
             <h2>_size_</h2>
 
-            <button class="button button_size_larger" type="button">.button.button_size_larger</button>
+            <button class="button button_size_larger" type="button">.button_size_larger</button>
 
 
             <br>
