--- a/development/markups/_link.html
+++ b/development/markups/_link.html
@@ -21,7 +21,7 @@
                 Description
             </p>
 
-            <a class="link" href="#"></a>
+            <a class="link" href="#">.link</a>
 
             <br>
             <br>
@@ -29,7 +29,7 @@
             <br>
             <h2>_palette_</h2>
 
-            <a class="link link_palette_danger" href="#">.link.link_palette_danger</a>
+            <a class="link link_palette_danger" href="#">.link_palette_danger</a>
 
 
             <br>
@@ -38,7 +38,27 @@
             <br>
             <h2>_fake</h2>
 
-            <a class="link link_fake" href="#">.link.link_fake</a>
+            <a class="link link_fake" href="#">.link_fake</a>
+
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>Tags</h2>
+
+
+            <div class="link">div.link</div>
+
+            <span class="link">span.link</span>
+
+            <label class="link">label.link</label>
+
+            <a class="link" href="#">a.link</a>
+
+            <button class="link" type="button">button.link</button>
+
+            <input class="link" type="button" value="input.link">
 
             <br>
             <br>
