--- a/development/markups/_title.html
+++ b/development/markups/_title.html
@@ -31,19 +31,16 @@
             <br>
             <br>
             <br>
-            <h2>_font_</h2>
+            <h2>_importance_</h2>
+            <br>
 
 
-            <h1 class="title title_font_larger">.title.title_font_larger</h1>
+            <div class="title title_importance_higher">.title_importance_higher</div>
 
             <br>
-            <br>
-            <br>
-            <br>
-            <h2>_uppercase</h2>
 
+            <div class="title title_importance_lower">.title_importance_lower</div>
 
-            <h2 class="title title_uppercase">.title.title_uppercase</h2>
 
             <br>
             <br>
