Update html/body classes, font aliasing, libraries update

--- a/development/markups/_video.html
+++ b/development/markups/_video.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../styles/style.css">
     </head>
 
-    <body class="body">
+    <body>
 
 
 
@@ -74,7 +74,7 @@
 
 
         <!-- jQuery -->
-        <script src="../vendors/jquery/jquery-3.2.0.min.js"></script>
+        <script src="../vendors/jquery/jquery-3.2.1.min.js"></script>
 
         <!-- Outline.js -->
         <script src="../vendors/outline/outline.js"></script>
