--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -17,36 +17,26 @@
             <br>
             <br>
             <h1>.button</h1>
-            <p>
-                Description
-            </p>
 
-            <button class="button">.button</button>
+            <button class="button">Foobar</button>
 
-            <br>
-            <br>
-            <br>
-            <br>
-            <h2>_size_</h2>
-
-            <button class="button button_size_larger" type="button">.button_size_larger</button>
 
 
             <br>
             <br>
             <br>
             <br>
-            <h2>Tags</h2>
+            <h2>Tag</h2>
 
-            <div class="button">div.button</div>
+            <div class="button" tabindex="0">div.button</div>
 
             <br><br>
 
-            <span class="button">span.button</span>
+            <span class="button" tabindex="0">span.button</span>
 
             <br><br>
 
-            <label class="button" for="#">label.button</label>
+            <label class="button" for="#" tabindex="0">label.button</label>
 
             <br><br>
 
