--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -18,15 +18,21 @@
             <br>
             <h1>.button</h1>
 
-            <button class="button">Foobar</button>
-
-
+            <button class="button">Submit</button>
 
             <br>
             <br>
             <br>
+            <h2>.button--secondary</h2>
+
+            <button class="button button--secondary">Cancel</button>
+
+
             <br>
-            <h2>Tag</h2>
+            <br>
+            <br>
+            <br>
+            <h2>Tags test</h2>
 
             <div class="button" tabindex="0">div.button</div>
 
