--- a/src/markups/_link.html
+++ b/src/markups/_link.html
@@ -17,35 +17,75 @@
             <br>
             <br>
             <h1>.link</h1>
+
+
+            <a class="link" href="#">Contacts</a>
+
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>.link--text-alike</h2>
+
+            <a class="link link--text-alike" href="#">Contacts</a>
+
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>.link--no-hover</h2>
             <p>
-                Description
+                For the case when we <b>need</b> the functionality of <b><i>&lt;a&gt;</i></b>, but we don't want to emphasize that it is actually a link.
+                For example, a link to a phone number:
             </p>
 
-            <a class="link" href="#">.link</a>
+            <a class="link link--no-hover" href="tel:+71234567890">+7 (123) 456-78-90</a>
 
             <br>
             <br>
-            <br>
-            <br>
-            <h2>_palette_</h2>
 
-            <a class="link link_palette_danger" href="#">.link_palette_danger</a>
+
 
 
             <br>
             <br>
             <br>
             <br>
-            <h2>_fake</h2>
+            <h2>.link--fake</h2>
+            <p>
+                For the case when we <b>don't need</b> the functionality of <b><i>&lt;a&gt;</i></b>, but still must use it.
+            </p>
+            <p>
+                In certain cases browsers attempt to detect links where there are none.
+                For example, long sequences of digits can be mistaken as a phone number.
+                Some dates on the page can be interpreted as information suitable for adding to a calendar.
+                Or the user's email on hos own page, which shouldn't be clickable, can still be seen as a link to an email.
+            </p>
+            <p>
+                In these situations, browsers (especially mobile once) often wrap it with an <b><i>&lt;a&gt;</i></b> tag.
+                As a result default blue styling will be applied. To prevent this from happening,
+                we can add the <b><i>&lt;a&gt;</i></b> manually remove its styling:
+            </p>
+            <br>
 
-            <a class="link link_fake" href="#">.link_fake</a>
+            <a class="link link--fake">4800004-4994</a>
+
+            <br>
+
+            <a class="link link--fake">March 13, 2023 at 16:20</a>
+
+            <br>
+
+            <a class="link link--fake">foobar@example.org</a>
 
 
             <br>
             <br>
             <br>
             <br>
-            <h2>Tags</h2>
+            <h2>Tags test</h2>
 
 
             <div class="link">div.link</div>
