--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -17,31 +17,22 @@
             <br>
             <br>
             <h1>.input</h1>
-            <p>
-                Description
-            </p>
-
-            <br>
-            <br>
-            <br>
-            <br>
 
             <div class="input">
-                <label class="input__label" for="temp-a">Label</label>
-                <input class="input__widget" type="text" placeholder="Input field" id="temp-a">
+                <input class="input__widget" type="text" placeholder="First name">
             </div>
 
             <br>
             <br>
             <br>
             <br>
-            <h2>_widget_</h2>
+            <h2>.input--area</h2>
 
-            <div class="input input_type_area">
-                <label class="input__label" for="temp-b">Label</label>
-                <textarea class="input__widget" placeholder="Textarea field" id="temp-b"></textarea>
+            <div class="input input--area">
+                <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
             </div>
 
+            
 
 
             <br>
