--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -25,14 +25,41 @@
             <br>
             <br>
             <br>
-            <br>
             <h2>.input--area</h2>
 
             <div class="input input--area">
                 <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
             </div>
 
-            
+            <br>
+            <br>
+            <br>
+            <h2>.input--select</h2>
+
+
+            <b>.input--placeholder-is-chosen</b>
+            <p>
+                There is a problem with default &lt;select&gt; tag.
+                It doesn't work with place <b>placeholder</b> attribute.
+                It make sense at some point: at least one value should always be selected.
+                On the other hand it looks out of place inside of a form with other
+                inputs that actually have placeholders. So lets fake it:
+            </p>
+
+            <div class="input input--select input--placeholder-is-chosen">
+                <select class="input__widget">
+                    <option value="placeholder">Country</option>
+                    <option>United States</option>
+                    <option>Russia</option>
+                    <option>Vietnam</option>
+                    <option>Thailand</option>
+                </select>
+            </div>
+
+            <p>
+                Here we assign one of the options as placeholder and when it's selected
+                we add <b>.input--placeholder-is-chosen</b> class. Please do the same.
+            </p>
 
 
             <br>
@@ -70,6 +97,7 @@
 
         <!-- Temp -->
         <script src="../scripts/temp.js"></script>
+        <script src="../scripts/_input.js"></script>
 
 
     </body>
