--- a/src/markups/_link.html
+++ b/src/markups/_link.html
@@ -135,6 +135,7 @@
 
         <!-- Temp -->
         <script src="../scripts/temp.js"></script>
+        <script src="../scripts/_input.js"></script>
 
 
     </body>
