Clean up and write docs for .input--select

--- a/src/markups/_link.html
+++ b/src/markups/_link.html
@@ -37,7 +37,7 @@
             <br>
             <h2>.link--no-hover</h2>
             <p>
-                For the case when we <b>need</b> the functionality of <b><i>&lt;a&gt;</i></b>, but we donʼt want to emphasize that it is actually a link.
+                For the case when we <b>need</b> the functionality of <b><i>&lt;a&gt;</i></b>, but we don’t want to emphasize that it is actually a link.
                 For example, a link to a phone number:
             </p>
 
@@ -55,13 +55,13 @@
             <br>
             <h2>.link--fake</h2>
             <p>
-                For the case when we <b>donʼt need</b> the functionality of <b><i>&lt;a&gt;</i></b>, but still must use it.
+                For the case when we <b>don’t need</b> the functionality of <b><i>&lt;a&gt;</i></b>, but still must use it.
             </p>
             <p>
                 In certain cases browsers attempt to detect links where there are none.
                 For example, long sequences of digits can be mistaken as a phone number.
                 Some dates on the page can be interpreted as information suitable for adding to a calendar.
-                Or the userʼs email on hos own page, which shouldnʼt be clickable, can still be seen as a link to an email.
+                Or the user’s email on hos own page, which shouldn’t be clickable, can still be seen as a link to an email.
             </p>
             <p>
                 In these situations, browsers (especially mobile once) often wrap it with an <b><i>&lt;a&gt;</i></b> tag.
