--- a/src/markups/_wysiyg.html
+++ b/src/markups/_wysiyg.html
@@ -24,7 +24,7 @@
                 On one hand, we should never match on tags globally or apply styles to tags for
                 the sake of modularity. We always use classes (or attributes, sometimes).
                 On the other hand, there are cases, such a user generated content or styling long text,
-                where we donʼt control the HTML code that will be placed. So we canʼt expect the usage of classes there.
+                where we don’t control the HTML code that will be placed. So we can’t expect the usage of classes there.
             </p>
             <p>
                 This is where we wrap text in a <b><i>.wysiwyg</i></b> class, and all the tags inside inherit the defined styles.
