--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -36,29 +36,25 @@
             <br>
             <h2>.input--select</h2>
 
-
-            <b>.input--placeholder-is-chosen</b>
-            <p>
-                There is a problem with default &lt;select&gt; tag.
-                It doesn't work with place <b>placeholder</b> attribute.
-                It make sense at some point: at least one value should always be selected.
-                On the other hand it looks out of place inside of a form with other
-                inputs that actually have placeholders. So lets fake it:
-            </p>
-
             <div class="input input--select input--placeholder-is-chosen">
                 <select class="input__widget">
                     <option value="placeholder">Country</option>
-                    <option>United States</option>
-                    <option>Russia</option>
-                    <option>Vietnam</option>
-                    <option>Thailand</option>
+                    <option>Afghanistan</option>
+                    <option>Albania</option>
+                    <option>Algeria</option>
+                    <option>...</option>
+                    <option>Zimbabwe</option>
                 </select>
             </div>
 
             <p>
-                Here we assign one of the options as placeholder and when it's selected
-                we add <b>.input--placeholder-is-chosen</b> class. Please do the same.
+                Notice that there is a problem with the <b><i>&lt;select&gt;</i></b> tag.
+                It doesn’t work with the <b><i>placeholder</i></b> attribute. Let’s fake it.
+            </p>
+            <p>
+                Assign first option to be a placeholder: <b><i>&lt;option value="placeholder"&gt;</i></b>. Then
+                use JavaScript to check if this option is selected and toggle the <b><i>.input--placeholder-is-chosen</i></b>
+                class to change the color.
             </p>
 
 
