--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -13,7 +13,7 @@
 
 
 
-        <div style="width: 600px; margin: 0 auto;">
+        <div style="max-width: 720px; margin: 0 auto; padding: 0 var(--container-padding);">
             <br>
             <br>
             <h1>.input</h1>
@@ -53,7 +53,7 @@
             </p>
             <p>
                 Assign first option to be a placeholder: <b><i>&lt;option value="placeholder"&gt;</i></b>. Then
-                use JavaScript to check if this option is selected and toggle the <b><i>.input--placeholder-is-chosen</i></b>
+                use JS to check if this option is selected and toggle the <b><i>.input--placeholder-is-chosen</i></b>
                 class to change the color.
             </p>
 
