--- a/src/markups/_wysiyg.html
+++ b/src/markups/_wysiyg.html
@@ -13,7 +13,7 @@
 
 
 
-        <div style="width: 600px; margin: 0 auto;">
+        <div style="max-width: 720px; margin: 0 auto; padding: 0 var(--container-padding);">
             <br>
             <br>
             <h1>.wysiwyg</h1>
