--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -32,6 +32,13 @@
             </div>
 
             <br>
+            <h3>.input--expandable</h3>
+
+            <div class="input input--area input--extendable">
+                <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
+            </div>
+
+            <br>
             <br>
             <br>
             <h2>.input--select</h2>
