input--expandable class fix

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -34,7 +34,7 @@
             <br>
             <h3>.input--expandable</h3>
 
-            <div class="input input--area input--extendable">
+            <div class="input input--area input--expandable">
                 <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
             </div>
 
