--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -70,20 +70,10 @@
         </div>
 
 
-
-
-        <!-- jQuery -->
         <script src="../vendors/jquery/jquery-3.2.1.min.js"></script>
-
-        <!-- Outline.js -->
-        <script src="../vendors/outline/outline.js"></script>
-
-        <!-- Magnific popup-->
         <script src="../vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-
-        <!-- Temp -->
-        <script src="../scripts/temp.js"></script>
+        <script src="../vendors/outline/outline.js"></script>
+        <script src="../scripts/_mfp.js"></script>
         <script src="../scripts/_input.js"></script>
 
 
