--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -68,6 +68,20 @@
             <br>
             <br>
             <br>
+            <h2>With <a href="_label.html">.label</a></h2>
+
+            <label class="label" for="bpbanapj">
+                First name
+            </label>
+
+            <div class="input">
+                <input class="input__widget" type="text" id="bpbanapj">
+            </div>
+
+
+            <br>
+            <br>
+            <br>
             <br>
             <br>
             <br>
