--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -70,12 +70,25 @@
             <br>
             <h2>With <a href="_label.html">.label</a></h2>
 
-            <label class="label" for="bpbanapj">
+            <label class="label" for="bp24napi">
                 First name
             </label>
 
             <div class="input">
-                <input class="input__widget" type="text" id="bpbanapj">
+                <input class="input__widget" type="text" id="bp24napi">
+            </div>
+
+
+            <br>
+            <br>
+            <br>
+            <h2>With <a href="_hint.html">.hint</a></h2>
+
+            <div class="input">
+                <input class="input__widget" type="text" id="dn70m2ff">
+            </div>
+            <div class="hint">
+                Can’t be changed later
             </div>
 
 
