--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -23,6 +23,12 @@
             </div>
 
             <br>
+
+            <div class="input">
+                <input class="input__widget" type="text" placeholder="First name" value="Konstantin Konstantinopolsky">
+            </div>
+
+            <br>
             <br>
             <br>
             <h2>.input--area</h2>
@@ -85,11 +91,82 @@
             <h2>With <a href="_hint.html">.hint</a></h2>
 
             <div class="input">
-                <input class="input__widget" type="text" id="dn70m2ff">
+                <input class="input__widget" type="text" placeholder="First name">
             </div>
             <div class="hint">
                 Can’t be changed later
             </div>
+
+
+            <br>
+            <br>
+            <br>
+            <h2>.input--error</h2>
+
+            <div class="input input--error">
+                <input class="input__widget" type="text" placeholder="First name">
+            </div>
+            <div class="hint danger">
+                This field is required
+            </div>
+
+            <br>
+
+            <div class="input input--select input--placeholder-is-chosen input--error">
+                <select class="input__widget">
+                    <option value="placeholder">Country</option>
+                    <option>Afghanistan</option>
+                    <option>Albania</option>
+                    <option>Algeria</option>
+                    <option>...</option>
+                    <option>Zimbabwe</option>
+                </select>
+            </div>
+            <div class="hint danger">
+                This field is required
+            </div>
+
+            <br>
+
+            <div class="input input--error">
+                <input class="input__widget" type="email" placeholder="Email" value="example@foobar.">
+            </div>
+            <div class="hint danger">
+                Email is not valid
+            </div>
+
+            <br>
+
+            <div class="input input--error">
+                <input class="input__widget" type="password" placeholder="Password" value="0xFoo">
+            </div>
+            <div class="hint danger">
+                Password is too short
+            </div>
+            <div class="hint danger">
+                Password must contain a special character
+            </div>
+            <div class="hint danger">
+                Password must be hard to guess: dates, phone numbers and names are not allowed and either it shouldn’t be based on public data
+            </div>
+            <div class="hint danger">
+                New password is similar to previous password
+            </div>
+
+            <br>
+
+            <div class="input input--error">
+                <input class="input__widget" type="email" placeholder="Email" value="example@foobar.">
+            </div>
+            <div class="hint danger">
+                Email is not valid
+            </div>
+
+           
+
+
+
+
 
 
             <br>
