--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -29,6 +29,12 @@
             </div>
 
             <br>
+
+            <div class="input">
+                <input class="input__widget" type="password" value="0xFoo">
+            </div>
+
+            <br>
             <br>
             <br>
             <h2>.input--area</h2>
