rename input textarea

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -37,16 +37,16 @@
             <br>
             <br>
             <br>
-            <h2>.input--area</h2>
+            <h2>.input--textarea</h2>
 
-            <div class="input input--area">
+            <div class="input input--textarea">
                 <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
             </div>
 
             <br>
             <h3>.input--expandable</h3>
 
-            <div class="input input--area input--expandable">
+            <div class="input input--textarea input--expandable">
                 <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
             </div>
 
