--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -29,8 +29,11 @@
             </div>
 
             <br>
+            <br>
+            <br>
+            <h2>.input--password</h2>
 
-            <div class="input">
+            <div class="input input--password">
                 <input class="input__widget" type="password" value="0xFoo">
             </div>
 
