--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -83,7 +83,7 @@
             <br>
             <br>
             <br>
-            <h2>With <a href="_label.html">.label</a> and <a href="_hint.html">.hint</a></h2>
+            <h2>With <a href="_label.html">.label</a> and <a href="_helper.html">.helper</a></h2>
             <br>
 
             <label class="label" for="bp24napi">
@@ -94,7 +94,7 @@
                 <input class="input__widget" type="text" id="bp24napi">
             </div>
 
-            <div class="hint">
+            <div class="helper">
                 Can’t be changed later
             </div>
 
@@ -111,7 +111,7 @@
             <div class="input">
                 <input class="input__widget" type="text" placeholder="License" disabled>
             </div>
-            <div class="hint">
+            <div class="helper">
                 Please choose contract type first
             </div>
 
@@ -122,7 +122,7 @@
                     <option value="placeholder" selected>City</option>
                 </select>
             </div>
-            <div class="hint">
+            <div class="helper">
                 Please select country first
             </div>
 
@@ -131,7 +131,7 @@
             <div class="input">
                 <input class="input__widget" type="email" placeholder="Email" value="foobar@example.org" disabled>
             </div>
-            <div class="hint">
+            <div class="helper">
                 Email can’t be changed
             </div>
 
@@ -144,7 +144,7 @@
             <div class="input input--error">
                 <input class="input__widget" type="text" placeholder="First name">
             </div>
-            <div class="hint hint--output">
+            <div class="helper helper--output">
                 This field is required
             </div>
 
@@ -160,7 +160,7 @@
                     <option>Zimbabwe</option>
                 </select>
             </div>
-            <div class="hint hint--output">
+            <div class="helper helper--output">
                 This field is required
             </div>
 
@@ -169,7 +169,7 @@
             <div class="input input--error">
                 <input class="input__widget" type="email" placeholder="Email" value="foobar@example.">
             </div>
-            <div class="hint hint--output">
+            <div class="helper helper--output">
                 Email is not valid
             </div>
 
@@ -178,16 +178,16 @@
             <div class="input input--error">
                 <input class="input__widget" type="password" placeholder="Password" value="0xFoo">
             </div>
-            <div class="hint hint--output">
+            <div class="helper helper--output">
                 Password is too short
             </div>
-            <div class="hint hint--output">
+            <div class="helper helper--output">
                 Password must contain a special character
             </div>
-            <div class="hint hint--output">
+            <div class="helper helper--output">
                 Password must be hard to guess: dates, phone numbers and names are not allowed and either it shouldn’t be based on public data
             </div>
-            <div class="hint hint--output">
+            <div class="helper helper--output">
                 New password is similar to previous password
             </div>
 
