--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -175,7 +175,7 @@
 
             <br>
 
-            <div class="input input--error">
+            <div class="input input--password input--error">
                 <input class="input__widget" type="password" placeholder="Password" value="0xFoo">
             </div>
             <div class="helper helper--output">
