simplify input types

--- a/src/markups/_helper.html
+++ b/src/markups/_helper.html
@@ -57,7 +57,7 @@
                 Can be used for outputting error message. A few in a row is also possible:
             </p>
 
-            <div class="input input--password input--error">
+            <div class="input input--error">
                 <input class="input__widget" type="password" placeholder="Password" value="0xFoo">
             </div>
             <div class="helper helper--output">
