--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -29,36 +29,35 @@
             </div>
 
             <br>
-            <br>
-            <br>
-            <h2>.input--password</h2>
 
-            <div class="input input--password">
+            <h2>Password</h2>
+
+            <div class="input">
                 <input class="input__widget" type="password" value="0xFoo">
             </div>
 
             <br>
             <br>
             <br>
-            <h2>.input--textarea</h2>
+            <h2>Textarea</h2>
 
-            <div class="input input--textarea">
+            <div class="input">
                 <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
             </div>
 
             <br>
             <h3>.input--expandable</h3>
 
-            <div class="input input--textarea input--expandable">
+            <div class="input input--expandable">
                 <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
             </div>
 
             <br>
             <br>
             <br>
-            <h2>.input--select</h2>
+            <h2>Select</h2>
 
-            <div class="input input--select input--placeholder-is-chosen">
+            <div class="input input--placeholder-is-chosen">
                 <select class="input__widget">
                     <option value="placeholder" selected>Country</option>
                     <option>Afghanistan</option>
@@ -117,7 +116,7 @@
 
             <br>
 
-            <div class="input input--select input--placeholder-is-chosen">
+            <div class="input input--placeholder-is-chosen">
                 <select class="input__widget" disabled>
                     <option value="placeholder" selected>City</option>
                 </select>
@@ -150,7 +149,7 @@
 
             <br>
 
-            <div class="input input--select input--placeholder-is-chosen input--error">
+            <div class="input input--placeholder-is-chosen input--error">
                 <select class="input__widget">
                     <option value="placeholder" selected>Country</option>
                     <option>Afghanistan</option>
@@ -175,7 +174,7 @@
 
             <br>
 
-            <div class="input input--password input--error">
+            <div class="input input--error">
                 <input class="input__widget" type="password" placeholder="Password" value="0xFoo">
             </div>
             <div class="helper helper--output">
